--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-websocket-redis>=0.4.4,<0.5
 uwsgi==2.0.11.2
 celery==3.1.19
 django-polymorphic>=0.9,<0.10
+django-cors-headers
 
 paramiko
 unicodecsv
